--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <body>
         <h1>Battleship Game</h1>
-        <h3>Instructions<br>
-            1. Hit "Start Game" to automatically set pieces.<br>
+        <h3>Instructions</h3>
+            <h4>1. Hit "Start Game" to automatically set pieces.<br>
             2. Red Team starts and selects a space on the Blue Team's board.<br>
             3. If a hit, space will fill with a hint as to what ship type it is.<br>
             4. If a miss, space will be colored white.<br>
             5. Turn switches after a hit or a miss and continues until all battleships are sunk.
-        </h3>
+            </h4>
         <button id="start-button">Start Game</button>
         <div id="status-message"></div>
     
@@ -25,7 +25,7 @@
                 <h2>Red Team Board</h2>
             </div>
             <div class="grid-container">
-                <h2>Blue Team</h2>
+                <h2>Blue Team Board</h2>
             </div>
         </div>
     <script type=text/javascript src="js/app.js"></script>
